Hero alignment fixes.

--- a/wp-content/themes/dunkerskulturhus/assets/source/sass/component/hero/hero.scss
+++ b/wp-content/themes/dunkerskulturhus/assets/source/sass/component/hero/hero.scss
@@ -197,10 +197,6 @@
     }
 }
 
-.hero + .container {
-    margin-top: 80px;
-}
-
 @keyframes scroll-down-please {
     0% {
         top: -4px;
